--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,14 @@
             <artifactId>jjwt</artifactId>
             <version>0.12.3</version>
         </dependency>
+<!--        腾讯云-->
+        <!-- 腾讯云 cos 服务 -->
+        <dependency>
+            <groupId>com.qcloud</groupId>
+            <artifactId>cos_api</artifactId>
+            <version>5.6.227</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
