--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,21 @@
             <artifactId>jjwt</artifactId>
             <version>0.12.3</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>redis.clients</groupId>-->
+<!--            <artifactId>jedis</artifactId>-->
+<!--            <version>5.2.0</version>-->
+<!--        </dependency>-->
+        <!-- Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
 
         <!-- 腾讯云 cos 服务 -->
         <dependency>
